# ai-devops-platform

./: .env.example  .gitignore  PROMPT.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
agents/: README.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_phase2_logs_incidents.py  0003_phase3_kubernetes.py  0004_phase6_security.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: auth.py  chat.py  cicd.py  cost.py  health.py  incidents.py  kubernetes.py  logs.py  metrics.py  security.py  terraform.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: domain.py
backend/app/schemas/: auth.py  chat.py  cicd.py  cost.py  incidents.py  kubernetes.py  logs.py  metrics.py  security.py  terraform.py
backend/app/services/: ai.py  cache.py  cicd.py  cost.py  incidents.py  kubernetes.py  logs.py  metrics.py  security.py  terraform.py  vector_store.py
backend/tests/: test_cicd_service.py  test_cost_service.py  test_health.py  test_kubernetes_service.py  test_security_service.py  test_terraform_service.py
docs/: api.md  architecture.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/lib/: api.ts
infrastructure/docker/: README.md
infrastructure/kubernetes/: backend-deployment.yaml  (+1 more)
monitoring/: README.md
scripts/: README.md
tests/: README.md
(+30 files in other folders)
