[project]
name = "ai-devops-backend"
version = "0.1.0"
description = "FastAPI backend for the AI DevOps Platform"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.13.3",
  "asyncpg==0.29.0",
  "bcrypt==4.2.0",
  "chromadb==1.5.9",
  "email-validator==2.2.0",
  "fastapi==0.115.5",
  "httpx==0.27.2",
  "prometheus-client==0.21.0",
  "pydantic-settings==2.6.1",
  "python-jose[cryptography]==3.3.0",
  "python-multipart==0.0.12",
  "redis==5.1.1",
  "sqlalchemy[asyncio]==2.0.36",
  "structlog==24.4.0",
  "uvicorn[standard]==0.32.0"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "ruff==0.7.4"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
